# currency_converter_service

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.rst  docker-compose.yml  pyproject.toml  pytest.ini
currency_converter_service/: config.py  currency.py  currency_converter.py  main.py
currency_converter_service/dependencies/: __init__.py  database.py  rates_storage.py
currency_converter_service/models/: __init__.py  models.py
tests/: conftest.py  test_dependencies.py  test_routes.py  test_version.py
